 * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 * #1515 (KernelSmoothing build failure)
 * #1520 (The NLopt test is dubious)
 * #1521 (Basis of MonomialFunction)
 * #1529 (The error of the NonLinearLeastSquaresCalibration and GaussianNonLinearCalibration are different)
 * #1540 (SubsetSampling: incorrect event sample)
 * #1549 (Doc of evaluation operator of KrigingResult)
 * #1553 (Optimization algorithms ignore MaxEvaluationNumber parameter in SORM)
 * #1556 (WeibullMin::computePDFGradient yields the partial derivatives in the wrong order)
 * #1564 (Set a Point makes ot crash)
 * #1567 (The API doc of SobolIndicesExperiment has a format issue)
 * #1573 (LinearModelAnalysis::drawQQPlot line is not the first bisector)
 * #1581 (LinearModelAlgorithm run() fails to parse Sample description)
 * #1586 (Documentation: description error in the API for the FittingTest_BestModelKolmogorov and FittingTest_BestModelChiSquaredclasses)
 * #1590 (The equation of the Fejer quadrature rule is triplicated)
 * #1592 (SubsetSampling returns an error if Pf=1)
 * #1594 (LinearLeastSquaresCalibration and CalibrationResult)
 * #1599 (FieldToPointConnection-BlockSize is missing)


== 1.15 release (2020-05-25) == #release-1.15

=== Library ===

==== Major changes ====
 * New EV solver for KarhunenLoeveP1Algorithm (Spectra), with sparse matrix and HMatrix support
 * Enable HMat AcaRandom compression method

==== New classes ====
 * Ipopt optimization solver

==== Documentation ====

==== API changes ====
 * Removed deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Removed deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
 * Removed deprecated MethodOfMomentsFactory::set,getOptimizationProblem
 * ResourceMap::Set* methods no longer add new keys, the new Add* methods must be used instead
 * Removed OPTpp